...
    AlertDialog(
        onDismissRequest = alCerrar,
        confirmButton = {
            TextButton(onClick = {
                alCerrar()
                alConfirmar()
            }) { Text("Deshacer") }
        },
        dismissButton = {
            TextButton(onClick = alCerrar) { Text("Cancelar") }
        },
        title = { Text("Deshacer «$nombre»") },
        text = {
...
